# drive_ros_mavlink_CC2016

./: .cproject  .project  CMakeLists.txt  README.md  package.xml
config/: cc2017_car.yaml  sensor_cov.yaml
include/drive_ros_mavlink_cc2016/: calc_cov.h  mavlink2ros.h  time_conv.h
include/drive_ros_mavlink_cc2016/phoenix/: mavlink.h  mavlink_msg_config.h  mavlink_msg_config_count.h  mavlink_msg_config_param_float.h  mavlink_msg_config_param_int.h  mavlink_msg_config_request.h  mavlink_msg_config_request_count.h  mavlink_msg_control_command.h  mavlink_msg_heartbeat.h  mavlink_msg_odometer.h  mavlink_msg_proximity.h
include/mavlink_phoenix/: mavlink2ros.h
include/mavlink_phoenix/phoenix/: mavlink_msg_command.h  mavlink_msg_config_param_bool.h  mavlink_msg_config_param_set_bool.h  mavlink_msg_config_param_set_float.h  mavlink_msg_config_param_set_int.h  mavlink_msg_config_request_params.h  mavlink_msg_control_lights.h  mavlink_msg_debug.h  mavlink_msg_imu.h  mavlink_msg_notification.h  mavlink_msg_odometer_abs.h  mavlink_msg_odometer_delta.h  mavlink_msg_odometer_delta_raw.h  mavlink_msg_odometer_raw.h  mavlink_msg_parking_lot.h  mavlink_msg_telemetry.h  phoenix.h  testsuite.h  version.h
launch/: mavlink_CC2016.launch  mavlink_CC2016.test  mavlink_CC2016_regress.test  mavlink_CC2016_unit.test  mavlink_phoenix.launch
msg/: COMMAND.msg  CONFIG.msg  CONFIG_COUNT.msg  CONFIG_PARAM_BOOL.msg  CONFIG_PARAM_FLOAT.msg  CONFIG_PARAM_INT.msg  CONFIG_PARAM_SET_BOOL.msg  CONFIG_PARAM_SET_FLOAT.msg  CONFIG_PARAM_SET_INT.msg  CONFIG_REQUEST.msg  CONFIG_REQUEST_COUNT.msg  CONFIG_REQUEST_PARAMS.msg  CONTROL_COMMAND.msg  CONTROL_LIGHTS.msg  DEBUG.msg  E_COMMAND_TYPE.msg  E_DRIVE_MODE.msg  E_NOTIFICATION_TYPE.msg  E_REMOTE_CONTROL_STATUS.msg  HEARTBEAT.msg  IMU.msg  NOTIFICATION.msg  ODOMETER.msg  ODOMETER_ABS.msg  ODOMETER_DELTA.msg  ODOMETER_DELTA_RAW.msg  ODOMETER_RAW.msg  PARKING_LOT.msg  PROXIMITY.msg  TELEMETRY.msg
src/: mavlink_phoenix_node.cpp  time_conv.cpp
test/: mavlink_phoenix_debug_time_test.cpp  mavlink_phoenix_regress_test.bag  mavlink_phoenix_test.cpp  mavlink_phoenix_unit_test.cpp
