<?xml version="1.0"?>
<package>
    <name>drive_ros_mavlink_cc2016</name>
    <version>0.1.9</version>
    <description>Mavlink generated messages for package mavlink_phoenix</description>
    <maintainer email="posilva@gmail.com">Pedro Marque da Silva</maintainer>
    <license>MIT</license>

    <author email="posilva@academiafa.edu.pt">Pedro Marques da Silva</author>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>geometry_msgs</build_depend>
</package>
